# lilmod

./: .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmodules  .jsbeautifyrc  .jshintignore  .jshintrc  CHANGELOG.md  CONTRIBUTING.md  FCHost.bat  FCHost.sh  Makefile  README.md  build.config.json  compile.bat  compile.sh  cspell.json  gulpfile.js  legacySanityCheck.bat  legacySanityCheck.sh  package.json  sanityCheck.bat  sanityCheck.sh  serve.bat  setup.bat  setup.sh  simple-compiler.bat  simple-compiler.sh  tsconfig.json  watcher.bat  watcher.sh
FCHost/: .gitignore  Building_FCHost.txt  CMakeLists.txt  LICENSE.txt  cmake_vs2019.bat  cmake_vs2022.bat  documentation_FCHost.md
FCHost/fchost/: CMakeLists.txt  fchost.rc  fchost_app.cc  fchost_app.h  fchost_handler.cc  fchost_handler.h  fchost_handler_linux.cc  fchost_handler_win.cc  fchost_linux.cc  fchost_storage.cc  fchost_storage.h  fchost_storage_js.cc  fchost_storage_js.h  fchost_win.cc  resource.h  utility.cc  utility.h
artTools/: README.md  game_suffixes.txt  generate_game_suffixes.sh  normalize_svg.py  svg_split_utils.py  vector_clothing_replicator.py  vector_layer_split.py  vector_revamp_layer_split.py  webgl_editor.html
css/: css.md
css/001-lib/: Jquery.css  macros.css
css/002-variables/: colors.css
css/003-sugarcube-overwrite/: general.css  sidebar.css
css/arcologyBuilding/: arcologyBuilding.css
css/art/: art.css  genAI.css
css/corporation/: corporation.css
css/debugging/: profileEvents.css
css/endWeek/: FCTV.css  endWeekAnim.css  slavesReport.css
css/events/: events.css
css/facilities/: dressingRoom.css  nursery.css  statistics.css  studio.css  wardrobe.css
css/futureSocieties/: fsPassage.css
css/general/: formatting.css  layout.css  textColors.css
css/gui/: accordion.css  buttons.css  encyclopedia.css  favorite.css  hotkeySettings.css  linksStrip.css  lists.css  options.css  quicklinks.css  sidebar.css  tabs.css
css/interaction/: export.css  familyTree.css  prosthetics.css  slaveInteract.css  wardrobe.css
css/intro/: customizeSlaveTrade.css
css/manage/: budget.css  main.css
css/neighbor/: neighborDisplay.css
css/npc/: slaveOnSlaveFeeding.css
css/rulesAssistant/: conditionEditor.css  raLists.css  raOptions.css  raSummary.css
devNotes/: AnatomyOfAFreeCitiesEvent.md  Deepmurk_Vector_Art_Changelog.md  Economy notes.md  Extended Family Mode Explained.md  Pronouns.md  QuickList.md  clothing hair and accessory passages.md  exceptions.md  eyeDescription.rtf  eyeFunctions.md  gitSetup.md  inducedNCS.md  jsEventCreationGuide.md  limbFunctions.md  sanityCheck.md  sceneGuide.md  slaveListing.md  usefulJSFunctionDocumentation.md
devNotes/sugarcube stuff/: building SugarCube.md  sugarcube-fc-changes.patch
devTools/: DL-Loop.sh  concatFiles.bat  convert_twscript_to_js.sh  embed_favicon.py  head.html  switchBranch.sh  updateTool.sh  upload.sh
devTools/Script to convert SC to JS/: SC to JS 1.py
devTools/dictionaries/: countries_and_people_groups.txt  japanese.txt  languages.txt  names.txt
devTools/javaSanityCheck/: excluded
devTools/scripts/: FCHostInstallAndRun.js  advancedCompiler.js  customChecks.js  dependencyCheck.bat  dependencyCheck.js  dependencyCheck.sh  detectChanges.js  eslintChecks.js  sanityCheck.js  setup.js  spellingChecks.js  typescriptChecks.js  watcher.js  watcherLiveReload.js  yesno.js
devTools/types/: SugarCubeExtensions.d.ts  assistant.d.ts  extensions.d.ts
docker/fc-docker/: Dockerfile
docker/megacmd/: Dockerfile
docker/stage-build/: Dockerfile
js/: artInfrastructure.js  diff.js  dynamicJSLoading.js  random.js  ratings.js  utils.js
js/001-lib/: idb.js
js/002-config/: fc-js-init.js
js/003-data/: arcologyData.js  arcologyNames.js  assistantData.js  careers.js  constants.js  dictionary.js  futureSocietyData.js  gameVariableData.js  miscData.js  playerData.js  policiesData.js  poses.js  slaveBody.js  slaveGeneData.js  slaveMods.js  slaveProstheticsData.js  slaveSorting.js  slaveSummaryData.js  slaveTradePresets.js  startingGirlsData.js  svgFilters.js  weatherData.js
js/004-base/: SurgeryEffect.js  SurgeryProcedure.js
js/extensions/: number.extension.js
js/medicine/: utility.js
js/rulesAssistant/: 01-stack.js  conditionEditorSimple.js  conditionEditorTree.js  conditionEvaluation.js  z1-conditionEditorController.js
js/ui/: select.js
mods/: custom drugs.md  events.md  mods.md
mods/example/: index.js  rulesAssistantGetters.js  subscript.js
resources/: ReadmeBeforeAddingArt.md
saveTools/: README.md  fc_edit_save.py
src/002-config/: Serializable.js  fc-version.js  mousetrapConfig.js  sugarCubeConfig.js  z_after_fc-version.js
src/004-base/: 000-proxies.js  arcologyBuilding.js  baseEvent.js  basePitFight.js  basePrompt.js  domPassage.js  encyclopediaMap.js  facility.js  facilityFramework.js  specialSlavesProxy.js
src/005-passages/: SpecialUIPassages.js  bcPassages.js  birthPassages.js  budgetPassages.js  endWeekPassages.js  eventsPassages.js  facilitiesPassages.js  interactPassages.js  introPassages.js  managePassages.js  optionsPassages.js  slaveMarketPassages.js
src/Corporation/: 005-divisionBase.js  010-divisionAcquiring.js  010-divisionProcessing.js  010-divisionWorking.js  corporate-constants.js  corporate.js  corporateLedger.js  corporation-utils.js  manageCorporation.js
src/Mods/: DinnerParty.js
src/arcologyBuilding/: ManageArcology.js  apartments.js  base.js  decorative.js  filler.js  manufacturing.js  markets.js  penthouse.js  presets.js  purchaseArcology.js  shops.js
src/art/: Instructions for modifying the art files when adding a new outfit.txt  artJS.js  assistantArt.js
src/budget/: budget.js  costsBudget.js  loans.js  repBudget.js
src/cheats/: PCCheatMenu.js  PCCheatMenuCheatDatatypeCleanup.js  arcologyCheatDatatypeCleanup.js  cheatEditArcology.js  cheatEditNeightbors.js  cheatEditSlave.js  mod_EditChildCheatDatatypeCleanupNew.tw  mod_EditChildCheatNew.tw  mod_EditInfantCheatNew.tw  (+1 more)
submodules/: .gitmodules
tests/: diffProxy.js  ibc.js  index.js
themes/: themes.md
(+1407 files in other folders)
